<resources>
    <string name="app_name">BD Police Services</string>
    <string name="home_page"> </string>
    <string name="textview1">User Name</string>
    <string name="textview2">Password</string>
    <string name="button">Sign In</string>
    <string name="textview3" />
    <string name="user_name">User Name</string>
    <string name="insertpass">insert your password here</string>
    <string name="registerlink">not registered? sign up here </string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">username</string>
    <string name="mobile_number">mobile number</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="buttonReg">Register</string>
    <string name="textview4" />
    <string name="Nid_number">Email address</string>
    <string name="nid_number_hints">17 digit nid number</string>
    <string name="RegistrationSuccessful">Registration Successful</string>
    <string name="incorrectNidnumber">incorrect Nid number</string>
    <string name="todo">TODO</string>
    <string name="button1">complain</string>
    <string name="button2">General diary</string>
    <string name="button3">Missing person</string>
    <string name="button4">Cyber crime</string>
    <string name="button5">Read the instruction</string>
    <string name="ComplainTypeOfCrime">Complain Type</string>
    <string name="ComplainTitle">COMPLAINT AGAINST</string>
    <string name="ProfileUserName">Md.Eunusur Rahaman Bhuiyan</string>
    <string name="ProfileUserMobile">" +880 1521430101"</string>
    <string name="ComplainAccuserName">Name of the accuser</string>
    <string name="back">back</string>
    <string name="dummy_title">dummy title</string>
    <string name="previous_data">previous data</string>
    <string name="police_ratings">police rating</string>
    <string name="rate_your_investigation_officer">rate your investigation officer</string>
    <string name="submit_rating">submit rating</string>
    <string name="email_address_hints">registered email</string>
    <string name="Previous_data">Previsous Data</string>
    <string name="ProfileName">Md.Eunusur Rahaman Bhuiyan</string>
    <string name="ProfileMobileNumber">+880 1521430101</string>
    <string name="phone_number" />
    <string name="permanent_address" />
    <string name="father_s_name" />
    <string name="mother_s_name" />
    <string name="name" />
    <string name="present_address" />
    <string name="email" />
    <string name="change_password" />


</resources>