<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:background="@drawable/gradientbackground"
    tools:context=".registration">

    <ImageView
        android:id="@+id/userImageProfile"
        android:layout_width="154dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:src="@drawable/pci">
    </ImageView>

    <EditText
        android:id="@+id/NidNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nid_number_hints"
        android:layout_margin="5dp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/EditTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/EditTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/EditTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:fontFamily="cursive"
        android:onClick="ans2reg"
        android:text="@string/buttonReg"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="15sp"
        android:typeface="normal" />
    <TextView
        android:id="@+id/textviewError2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>