<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#353535"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviousData">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/viewStyle"
        android:textColor="#6BFFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/police_ratings"
        android:textAlignment="center"
        android:textColor="#6BFFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="#6F6F6F"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#353535"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:text="@string/rate_your_investigation_officer" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/ratingSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:padding="10dp"
            android:text="@string/submit_rating" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="380dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/backButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout1"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/police_rating_layout_drawable"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="10dp"
                    android:text="Officer1"
                    android:textColor="#C0C0C0"
                    android:textSize="20sp" />

                <RatingBar
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="0.5" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/police_rating_layout_drawable"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="10dp"
                    android:text="Officer2 (You rated this officer)"
                    android:textColor="#C0C0C0"
                    android:textSize="20sp" />

                <RatingBar
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.5" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/police_rating_layout_drawable"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="10dp"
                    android:text="Officer3"
                    android:textColor="#C0C0C0"
                    android:textSize="20sp" />

                <RatingBar
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3.5"
                    android:stepSize="0.5" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/police_rating_layout_drawable"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="10dp"
                    android:text="Officer4"
                    android:textColor="#C0C0C0"
                    android:textSize="20sp" />

                <RatingBar
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="1.5"
                    android:stepSize="0.5" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/police_rating_layout_drawable"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="10dp"
                    android:text="Officer5"
                    android:textColor="#C0C0C0"
                    android:textSize="20sp" />

                <RatingBar
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.5" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/police_rating_layout_drawable"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="10dp"
                    android:text="Officer6"
                    android:textColor="#C0C0C0"
                    android:textSize="20sp" />

                <RatingBar
                    android:layout_gravity="center"
                    android:id="@+id/ratingBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="2.5"
                    android:stepSize="0.5" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/backButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="#8B6C62"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>